Fix custom Windows close button being 1 dip too far left.

To match the OS the button should be flush with the right edge of the
window. This was also causing the top-right pixel of the screen to not
activate the button when the window was maximized.

Bug: 827664
Change-Id: Ie9f6a080c9374a842be729702c33ddbde9199e7e
Reviewed-on: https://chromium-review.googlesource.com/988845
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547586}
Former-commit-id: cce37ea23cb1e16bd129e5da36c960c5ab6012b8